# grpc-lotr

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.py  install_deps.sh  requirements.txt
.github/workflows/: build.yml
async-client/: CMakeLists.txt
async-client/src/: async_client.cpp  async_client.hpp  main.cpp
cmake/: common.cmake  compiler-warnings.cmake  grpc.cmake  project-settings.cmake
lotr/: CMakeLists.txt
lotr-proto/: CMakeLists.txt
lotr-proto/protos/: lotr.proto
lotr/src/: application.cpp  application.hpp  async_service.cpp  async_service.hpp  lotr.hpp  main.cpp  middleearth.cpp  middleearth.hpp  options.cpp  options.hpp  sync_service.cpp  sync_service.hpp
presentation/: slides.md
sync-client/: CMakeLists.txt
sync-client/src/: main.cpp  sync_client.cpp  sync_client.hpp
talk/: slides.md
utils/: CMakeLists.txt
utils/include/utils/: grpc_client.hpp  grpc_server.hpp  stream.hpp  unary_executor.hpp
utils/src/: grpc_server.cpp  unary_executor.cpp
